      Sys#opendir, Sys::IO#opendir
      Sys#closedir, Sys::IO#closedir
      Sys#readdir, Sys::IO#readdir
      Sys#rewinddir, Sys::IO#rewinddir
      Sys#telldir, Sys::IO#telldir
      Sys#seekdir, Sys::IO#seekdir
      Sys::IO::DirStream#DESTROY
      Sys::IO::Dirent#d_name
      Sys#readlink.
      Sys#lstat, Sys::IO::Windows#lstat
  [Incompatible Changes]
    * Remove Sys::IO::Windows#readlink method and add win_readlink method.
  
  [New Features]
    * Add Sys::IO::Windows#is_symlink method.
  [Changes]
    * Sys#l method use Sys::IO::Windows#is_symlink method.
    * Sys::IO::Windows#realpath resolve symbolic link by own and open a file as a reparse point.
  [Internal Changes]
    * Rewrite Sys::IO::Windows#lstat completly.
    * Add Sys::IO::Windows#_follow_symlinks_to method.
0.540 2025-05-23
  [Incompatible Changes]
    * Sys#readdir method returns a file name instead of a directory entry.
0.540 2025-05-23
  [Incompatible Changes]
    * Sys#readdir method returns a file name instead of a directory entry.
    
0.539 2025-05-23
  [Improvement with Incompatible Changes]
    * In this release, UTF-8 strings passed as arguments to the methods that calls Windows system calls are now handled correctly.
      Sys::IO#open
      Sys#open, Sys::IO#fopen
      Sys#chmod, Sys::IO#chmod
      Sys::IO#access
      Sys#mkdir, Sys::IO#mkdir
      Sys#rmdir, Sys::IO#rmdir
      Sys#chdir, Sys::IO#chdir
      Sys::IO#truncate
      Sys::Process#execv
      Sys#unlink, Sys::IO::Windows#unlink
      Sys#rename, Sys::IO::Windows#rename
      Sys#symlink, Sys::IO::Windows#symlink
      Sys::IO::Windows#_realpath
      Sys::IO#getcwd
      Sys::IO#_getdcwd
  [Incompatible Changes]
    * Remove Sys::IO#_fullpath method.
    * The first argument $buf of Sys::IO#getcwd must be undef. Otherwise an exception is thrown.
    * The second argument $buffer of Sys::IO#getcwd must be undef. Otherwise an exception is thrown.
  [Internal Changes]