@@ -10,7 +10,8 @@
       Sys::IO::DirStream#DESTROY
       Sys::IO::Dirent#d_name
       Sys#readlink.
-      Sys#lstat, Sys::IO::Windows#lstat
+      Sys#lstat, Sys::IO#lstat
+      Sys#stat, Sys::IO#stat
   [Incompatible Changes]
     * Remove Sys::IO::Windows#readlink method and add win_readlink method.
   
@@ -21,6 +22,7 @@
     * Sys::IO::Windows#realpath resolve symbolic link by own and open a file as a reparse point.
   [Internal Changes]
     * Rewrite Sys::IO::Windows#lstat completly.
+    * Rewrite Sys::IO::Windows#stat completly.
     * Add Sys::IO::Windows#_follow_symlinks_to method.
 0.540 2025-05-23
   [Incompatible Changes]
